# MEGAHACK-2026_TRUSTWORTHY

./: README.md
backend/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: api.py
backend/app/agents/casual_convo_agent/: profile.yaml
backend/app/agents/data_cleaning_agent/: profile.yaml
backend/app/agents/feature_analysis_agent/: profile.yaml
backend/app/agents/insight_generation_agent/: profile.yaml
backend/app/agents/recommendation_agent/: profile.yaml
backend/app/agents/supervisor_agent/: profile.yaml
backend/app/agents/visualization_agent/: profile.yaml
backend/app/core/: logging_config.py
backend/app/models/: api.py  config.py  state.py
backend/app/services/: agent_loader_service.py  analysis_service.py  chat_session_service.py  dataset_service.py  dataset_tools_service.py  llm_service.py  workflow_service.py
backend/config/: agents.yaml
backend/data/uploads/string/: Sample - Superstore.csv
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: Footer.tsx  InsightIcon.tsx  Stats.tsx
frontend/public/feature-agent-icons/: README.txt
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/components/: About.tsx  CTA.tsx  Contact.tsx  Features.tsx  Footer.tsx  Hero.tsx  Loader.tsx  MagicBento.tsx  Navbar.tsx  Stats.tsx  TiltCard.tsx  app-sidebar.tsx  nav-user.tsx  site-header.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/lib/: report-pdf.ts
(+19 files in other folders)
